uf-6035: Paging implemented towards db-procedure: spCustomerDetails