@@ -1,6 +1,24 @@
 package se.sundsvall.datawarehousereader.service;
 
-import generated.se.sundsvall.party.PartyType;
+import static generated.se.sundsvall.party.PartyType.ENTERPRISE;
+import static generated.se.sundsvall.party.PartyType.PRIVATE;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.tuple;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.when;
+import static org.springframework.data.domain.Sort.sort;
+import static se.sundsvall.datawarehousereader.service.mapper.CustomerMapper.toPartyType;
+
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Stream;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -13,10 +31,9 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.zalando.problem.Problem;
-import org.zalando.problem.Status;
+
 import se.sundsvall.datawarehousereader.api.model.CustomerType;
 import se.sundsvall.datawarehousereader.api.model.customer.CustomerDetails;
 import se.sundsvall.datawarehousereader.api.model.customer.CustomerDetailsParameters;
@@ -27,26 +44,7 @@ import se.sundsvall.datawarehousereader.integration.stadsbacken.model.customer.C
 import se.sundsvall.datawarehousereader.integration.stadsbacken.model.customer.CustomerEntity;
 import se.sundsvall.datawarehousereader.service.logic.PartyProvider;
 
-import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Stream;
-
-import static generated.se.sundsvall.party.PartyType.ENTERPRISE;
-import static generated.se.sundsvall.party.PartyType.PRIVATE;
-import static java.util.Collections.emptyList;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.tuple;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
-import static org.mockito.Mockito.when;
-import static org.springframework.data.domain.Sort.sort;
-import static se.sundsvall.datawarehousereader.service.mapper.CustomerMapper.toPartyType;
+import generated.se.sundsvall.party.PartyType;
 
 @ExtendWith(MockitoExtension.class)
 class CustomerServiceTest {
@@ -66,6 +64,9 @@ class CustomerServiceTest {
 	private Page<CustomerEntity> pageMock;
 
 	@Mock
+	private Page<CustomerDetailsEntity> pageDetailsMock;
+
+	@Mock
 	private CustomerEntity entityMock;
 
 	@InjectMocks
@@ -76,6 +77,9 @@ class CustomerServiceTest {
 
 	@Captor
 	private ArgumentCaptor<List<String>> customerOrgIdsCaptor;
+
+	@Captor
+	private ArgumentCaptor<List<String>> uuidsCaptor;
 
 	@Captor
 	private ArgumentCaptor<Pageable> pageableCaptor;
@@ -92,7 +96,7 @@ class CustomerServiceTest {
 
 		final var params = CustomerEngagementParameters.create();
 
-		when(repositoryMock.findAllByParameters(any(CustomerEngagementParameters.class), ArgumentMatchers.<List<String>>any(), any(Pageable.class))).thenReturn(pageMock);
+		when(repositoryMock.findAllByParameters(any(CustomerEngagementParameters.class), ArgumentMatchers.any(), any(Pageable.class))).thenReturn(pageMock);
 		when(entityMock.getCustomerType()).thenReturn(customerType.getStadsbackenTranslation());
 		when(entityMock.getCustomerOrgId()).thenReturn("customerOrgId");
 		when(pageMock.getContent()).thenReturn(List.of(entityMock));
@@ -125,41 +129,38 @@ class CustomerServiceTest {
 	void getDetailsWithPartyIdSet() {
 		final var randomUUID = UUID.randomUUID().toString();
 
-		when(partyProviderMock.translateToPartyId(any(PartyType.class), any(String.class))).thenReturn(randomUUID).thenReturn("");
-		when(customerDetailsRepositoryMock.findAllMatching(any(LocalDateTime.class))).thenReturn(List.of(
-			CustomerDetailsEntity.create()
-				.withCustomerOrgId("102000-0000")
-				.withCustomerId(1)
-				.withCustomerCategoryID(2)
-				.withCustomerCategoryDescription("customerCategoryDescription")
-				.withName("Name")
-				.withCo("co")
-				.withAddress("address")
-				.withZipcode("zipcode")
-				.withCity("city")
-				.withPhone1("phone1")
-				.withPhone2("phone2")
-				.withPhone3("phone3")
-				.withEmail1("email1")
-				.withEmail2("email2")
-				.withCustomerChangedFlg(true)
-				.withInstalledChangedFlg(true),
-			CustomerDetailsEntity.create()
-				.withCustomerOrgId("19990101-1235")
-				.withCustomerCategoryID(2)));
-
 		final var params = CustomerDetailsParameters.create();
 		params.setPartyId(List.of(randomUUID));
 		params.setFromDateTime(OffsetDateTime.now());
 		params.setLimit(100);
 		params.setPage(1);
-		params.setSortBy(Collections.singletonList("customerOrgId"));
+		params.setSortBy(List.of("customerOrgId"));
+
+		Page<CustomerDetailsEntity> pages = new PageImpl<>(List.of(
+				CustomerDetailsEntity.create()
+						.withUuid(randomUUID)
+						.withCustomerOrgId("102000-0000")
+						.withCustomerId(1)
+						.withCustomerCategoryID(2)
+						.withCustomerCategoryDescription("customerCategoryDescription")
+						.withName("Name")
+						.withCo("co")
+						.withAddress("address")
+						.withZipcode("zipcode")
+						.withCity("city")
+						.withPhone1("phone1")
+						.withPhone2("phone2")
+						.withPhone3("phone3")
+						.withEmail1("email1")
+						.withEmail2("email2")
+						.withCustomerChangedFlg(true)
+						.withInstalledChangedFlg(true)));
+
+		when(customerDetailsRepositoryMock.findWithPartyIds(any(LocalDateTime.class), ArgumentMatchers.any(), any(Pageable.class))).thenReturn(pages);
 
 		final var result = service.getCustomerDetails(params);
 
-		verify(customerDetailsRepositoryMock).findAllMatching(any(LocalDateTime.class));
-		verify(partyProviderMock, times(1)).translateToPartyId(eq(ENTERPRISE), any());
-		verify(partyProviderMock, times(1)).translateToPartyId(eq(PRIVATE), any());
+		verify(customerDetailsRepositoryMock).findWithPartyIds(any(LocalDateTime.class), uuidsCaptor.capture(), pageableCaptor.capture());
 
 		assertThat(result.getCustomerDetails())
 			.hasSize(1)
@@ -193,120 +194,50 @@ class CustomerServiceTest {
 				true));
 
 		assertThat(result.getMetaData().getCount()).isEqualTo(1L);
-		assertThat(result.getMetaData().getLimit()).isEqualTo(100);
+		assertThat(result.getMetaData().getLimit()).isEqualTo(1);
 		assertThat(result.getMetaData().getPage()).isEqualTo(1);
 		assertThat(result.getMetaData().getTotalPages()).isEqualTo(1);
 		assertThat(result.getMetaData().getTotalRecords()).isEqualTo(1);
-		assertThat(result.getMetaData().getSortBy()).isEqualTo(Collections.singletonList("customerOrgId"));
-		assertThat(result.getMetaData().getSortDirection()).isEqualTo(Sort.Direction.ASC);
-	}
-
-	@Test
-	void testGetDetailsWithoutPartyId() {
-		when(partyProviderMock.translateToPartyId(any(PartyType.class), any(String.class))).thenThrow(Problem.valueOf(Status.NOT_FOUND, "Party not found"));
-		when(customerDetailsRepositoryMock.findAllMatching(any(LocalDateTime.class))).thenReturn(List.of(
-			CustomerDetailsEntity.create()
-				.withCustomerOrgId("102000-0000")
-				.withCustomerId(1)
-				.withCustomerCategoryID(2)
-				.withCustomerCategoryDescription("customerCategoryDescription")
-				.withName("Name")
-				.withCo("co")
-				.withAddress("address")
-				.withZipcode("zipcode")
-				.withCity("city")
-				.withPhone1("phone1")
-				.withPhone2("phone2")
-				.withPhone3("phone3")
-				.withEmail1("email1")
-				.withEmail2("email2")
-				.withCustomerChangedFlg(true)
-				.withInstalledChangedFlg(true),
-			CustomerDetailsEntity.create()
-				.withCustomerOrgId("19990101-1235")
-				.withCustomerCategoryID(2)));
-
-		final var params = CustomerDetailsParameters.create();
-		params.setFromDateTime(OffsetDateTime.now());
-		params.setLimit(100);
-		params.setPage(1);
-		params.setSortBy(Collections.singletonList("customerOrgId"));
-
-		final var result = service.getCustomerDetails(params);
-
-		verify(customerDetailsRepositoryMock).findAllMatching(any(LocalDateTime.class));
-		verify(partyProviderMock, times(1)).translateToPartyId(eq(ENTERPRISE), any());
-		verify(partyProviderMock, times(1)).translateToPartyId(eq(PRIVATE), any());
-
-		assertThat(result.getCustomerDetails())
-			.hasSize(2)
-			.extracting(
-				CustomerDetails::getPartyId,
-				CustomerDetails::getCustomerOrgNumber,
-				CustomerDetails::getCustomerCategoryID,
-				CustomerDetails::getCustomerCategoryDescription,
-				CustomerDetails::getCustomerName,
-				CustomerDetails::getCareOf,
-				CustomerDetails::getStreet,
-				CustomerDetails::getPostalCode,
-				CustomerDetails::getCity,
-				CustomerDetails::getPhoneNumbers,
-				CustomerDetails::getEmails,
-				CustomerDetails::isCustomerChangedFlg,
-				CustomerDetails::isInstalledChangedFlg)
-			.containsExactly(
-				tuple(null, "102000-0000", 2, "customerCategoryDescription", "Name", "co", "address", "zipcode", "city", List.of("phone1", "phone2", "phone3"), List.of("email1", "email2"), true, true),
-				tuple(null, "19990101-1235", 2, null, null, null, null, null, null, emptyList(), emptyList(), false, false));
-
-		assertThat(result.getMetaData().getCount()).isEqualTo(2L);
-		assertThat(result.getMetaData().getLimit()).isEqualTo(100);
-		assertThat(result.getMetaData().getPage()).isEqualTo(1);
-		assertThat(result.getMetaData().getTotalPages()).isEqualTo(1);
-		assertThat(result.getMetaData().getTotalRecords()).isEqualTo(2);
-		assertThat(result.getMetaData().getSortBy()).isEqualTo(Collections.singletonList("customerOrgId"));
-		assertThat(result.getMetaData().getSortDirection()).isEqualTo(Sort.Direction.ASC);
+		assertThat(pageableCaptor.getValue().getSort()).isEqualTo(sort(CustomerDetailsEntity.class)
+				.by(CustomerDetailsEntity::getCustomerOrgId).ascending());
 	}
 
 	@Test
 	void getDetailsWithCustomerEngagementOrgIdSet() {
 		final var randomUUID = UUID.randomUUID().toString();
 
-		when(partyProviderMock.translateToPartyId(any(PartyType.class), any(String.class))).thenReturn(randomUUID).thenReturn("");
-
-		when(customerDetailsRepositoryMock.findAllMatching(any(LocalDateTime.class))).thenReturn(List.of(
-			CustomerDetailsEntity.create()
-				.withCustomerOrgId("102000-0000")
-				.withCustomerId(1)
-				.withCustomerCategoryID(2)
-				.withCustomerCategoryDescription("customerCategoryDescription")
-				.withName("Name")
-				.withCo("co")
-				.withAddress("address")
-				.withZipcode("zipcode")
-				.withCity("city")
-				.withPhone1("phone1")
-				.withPhone2("phone2")
-				.withPhone3("phone3")
-				.withEmail1("email1")
-				.withEmail2("email2")
-				.withCustomerChangedFlg(true)
-				.withInstalledChangedFlg(true),
-			CustomerDetailsEntity.create()
-				.withCustomerOrgId("19990101-1235")
-				.withCustomerCategoryID(2)));
-
 		final var params = CustomerDetailsParameters.create();
 		params.setCustomerEngagementOrgId("1020000000");
 		params.setFromDateTime(OffsetDateTime.now());
-		params.setLimit(100);
 		params.setPage(1);
+		params.setLimit(100);
 		params.setSortBy(Collections.singletonList("customerOrgId"));
+
+		Page<CustomerDetailsEntity> pages = new PageImpl<>(List.of(
+				CustomerDetailsEntity.create()
+						.withUuid(randomUUID)
+						.withCustomerOrgId("102000-0000")
+						.withCustomerId(1)
+						.withCustomerCategoryID(2)
+						.withCustomerCategoryDescription("customerCategoryDescription")
+						.withName("Name")
+						.withCo("co")
+						.withAddress("address")
+						.withZipcode("zipcode")
+						.withCity("city")
+						.withPhone1("phone1")
+						.withPhone2("phone2")
+						.withPhone3("phone3")
+						.withEmail1("email1")
+						.withEmail2("email2")
+						.withCustomerChangedFlg(true)
+						.withInstalledChangedFlg(true)));
+
+		when(customerDetailsRepositoryMock.findWithCustomerEngagementOrgId(any(LocalDateTime.class), eq("102000-0000"), pageableCaptor.capture())).thenReturn(pages);
 
 		final var result = service.getCustomerDetails(params);
 
-		verify(customerDetailsRepositoryMock).findAllMatching(any(LocalDateTime.class));
-		verify(partyProviderMock, times(1)).translateToPartyId(eq(ENTERPRISE), any());
-		verify(partyProviderMock, times(1)).translateToPartyId(eq(PRIVATE), any());
+		verify(customerDetailsRepositoryMock).findWithCustomerEngagementOrgId(any(LocalDateTime.class), eq("102000-0000"), pageableCaptor.capture());
 
 		assertThat(result.getCustomerDetails())
 			.hasSize(1)
@@ -340,12 +271,12 @@ class CustomerServiceTest {
 				true));
 
 		assertThat(result.getMetaData().getCount()).isEqualTo(1L);
-		assertThat(result.getMetaData().getLimit()).isEqualTo(100);
+		assertThat(result.getMetaData().getLimit()).isEqualTo(1);
 		assertThat(result.getMetaData().getPage()).isEqualTo(1);
 		assertThat(result.getMetaData().getTotalPages()).isEqualTo(1);
 		assertThat(result.getMetaData().getTotalRecords()).isEqualTo(1);
-		assertThat(result.getMetaData().getSortBy()).isEqualTo(Collections.singletonList("customerOrgId"));
-		assertThat(result.getMetaData().getSortDirection()).isEqualTo(Sort.Direction.ASC);
+		assertThat(pageableCaptor.getValue().getSort()).isEqualTo(sort(CustomerDetailsEntity.class)
+				.by(CustomerDetailsEntity::getCustomerOrgId).ascending());
 	}
 
 	@Test
@@ -367,7 +298,7 @@ class CustomerServiceTest {
 		params.setOrganizationName(organizationName);
 		params.setPage(page);
 
-		when(repositoryMock.findAllByParameters(any(CustomerEngagementParameters.class), ArgumentMatchers.<List<String>>any(), any(Pageable.class))).thenReturn(pageMock);
+		when(repositoryMock.findAllByParameters(any(CustomerEngagementParameters.class), ArgumentMatchers.any(), any(Pageable.class))).thenReturn(pageMock);
 		when(pageMock.getContent()).thenReturn(List.of(entityMock));
 		when(entityMock.getCustomerType()).thenReturn(customerType.getStadsbackenTranslation());
 		when(entityMock.getCustomerOrgId()).thenReturn(legalId);
@@ -454,5 +385,34 @@ class CustomerServiceTest {
 		assertThat(response.getMetaData().getTotalPages()).isEqualTo(1);
 		assertThat(response.getMetaData().getTotalRecords()).isEqualTo(1);
 		assertThat(response.getCustomerEngagements()).isEmpty();
+	}
+
+	@Test
+	void testSetBothCustomerOrgIdAndPartyIds() {
+		CustomerDetailsParameters.create()
+				.withCustomerEngagementOrgId("200701011234")
+				.withPartyId(List.of("9f395f51-b5ed-401b-b700-ef70cbb15d89", "9f395f51-b5ed-401b-b700-ef70cbb15d90"));
+		List.of(
+		CustomerDetails.create()
+				.withCustomerOrgNumber("200701011234")
+				.withPartyId("9f395f51-b5ed-401b-b700-ef70cbb15d89"),
+		CustomerDetails.create()
+				.withCustomerOrgNumber("200701011234")
+				.withPartyId("9f395f51-b5ed-401b-b700-ef70cbb15d90"),
+		CustomerDetails.create()
+				.withCustomerOrgNumber("200701011234")
+				.withPartyId("9f395f51-b5ed-401b-b700-ef70cbb15d91"),
+		CustomerDetails.create()
+				.withCustomerOrgNumber("200701011234")
+				.withPartyId(""),
+		CustomerDetails.create()
+				.withCustomerOrgNumber("no-match")
+				.withPartyId("9f395f51-b5ed-401b-b700-ef70cbb15d89"));
+	}
+
+	private CustomerDetailsParameters generateParameters() {
+		return CustomerDetailsParameters.create()
+					.withCustomerEngagementOrgId("200701011234")
+					.withPartyId(List.of("9f395f51-b5ed-401b-b700-ef70cbb15d89", "9f395f51-b5ed-401b-b700-ef70cbb15d90"));
 	}
 }
